improving exception handling and adding trainer and trainee repository tests